Added widgets in separated files.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			  <span class="btn-view-all maia-button maia-button-secondary" data-bind="text: lang().demo2e"></span></a>
             </li>
             <li class="topic topic-search">
-              <a href="faq.html"><span class="icon-topic">&nbsp;</span>
+              <a href="sefarad.html"><span class="icon-topic">&nbsp;</span>
               <h2 data-bind="text: lang().demo3a">
               </h2>
               <ul>
