--- a/sefarad.html
+++ b/sefarad.html
@@ -3,6 +3,7 @@
 	
 	<!-- head starts -->
 	<head>
+		<script type="text/javascript" src="js/widgets/stockWidget.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetA.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetB.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetBarras.js"></script>
@@ -10,7 +11,7 @@
 		<script type="text/javascript" src="js/widgets/widgetWheel.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetWheelTwitter.js"></script>
 		<script type="text/javascript">
-			var widgetX = [widgetA, widgetB, widgetBarras, widgetD3, widgetWheel, widgetWheelTwitter];
+			var widgetX = [stockWidget, widgetA, widgetB, widgetBarras, widgetD3, widgetWheel, widgetWheelTwitter];
 		</script>
 		<meta charset="utf-8" />
 		
