--- a/sefarad.html
+++ b/sefarad.html
@@ -7,11 +7,14 @@
 		<script type="text/javascript" src="js/widgets/widgetA.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetB.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetBarras.js"></script>
+		<script type="text/javascript" src="js/widgets/widgetBarrasR.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetD3.js"></script>
+		<script type="text/javascript" src="js/widgets/widgetDonutsR.js"></script>
+		<script type="text/javascript" src="js/widgets/widgetSortBarR.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetWheel.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetWheelTwitter.js"></script>
 		<script type="text/javascript">
-			var widgetX = [stockWidget, widgetA, widgetB, widgetBarras, widgetD3, widgetWheel, widgetWheelTwitter];
+			var widgetX = [stockWidget, widgetA, widgetB, widgetBarras, widgetBarrasR, widgetD3, widgetDonutsR, widgetSortBarR, widgetWheel, widgetWheelTwitter];
 		</script>
 		<meta charset="utf-8" />
 		
