--- a/_sefarad.html
+++ b/_sefarad.html
@@ -69,6 +69,7 @@
 				$(".button" ).button();
 			
 				vm.routes();
+				vm.checkLogin();
 				
 				if(errorinroute || sparqlmode){
 					console.log("Aplicamos bindings");
@@ -113,8 +114,9 @@
 					<div id="logotext"><img src="img/ftt_header.png"><span data-bind="text: pageTitle"></span></div>
 				</div>
 				<!-- Search and help area -->
-				<div class="right_area">
-					<div class="icon"><img src="img/login.png" alt="Login" data-bind="click: $root.login"/></div>
+				<div class="right_area" >
+					
+					<!-- <div class="icon"><img src="img/login.png" alt="Login" data-bind="click: $root.promptLogin, visible: $root.securityEnabled"/></div> -->
 					<div class="icon"><img src="img/help.png" alt="Help" data-bind="click: $root.showHelp"/></div>
 					<div class="search" id="search-container">
 						<div class="search-inner">
@@ -132,50 +134,60 @@
 							<!-- /ko -->
 						</div>
 					</div>
-					</defaultiv>
-					<!-- Configuration section (hidden by default) -->
-					<div id="configuration" data-bind="fadeVisible: showConfigurationPanel">
-						<div class="ui-widget-header">
-							<h2 data-bind="text: lang().configuration"></h2>
-						</div>
-						<div class="col1">
-							<h3 data-bind="text: lang().personalization"></h3>
-							<ul>
-								<li data-bind="text: lang().pagetitle"></li>
-								<li><input id="pagetitle" type="text" data-bind="value: pageTitle" placeholder="Título de la página" /></li>
-								<li data-bind="text: lang().logo"></li>
-								<li><input id="logopath" type="text" data-bind="value: logoPath" placeholder="Logo de la página" /></li>
-								<li data-bind="text: lang().language"></li>
-								<li><select id="lang" data-bind="options: languages, value: selectedLanguage, optionsCaption: 
-									lang().langcaption"></select></li>
-								<li><input type="checkbox" style="width:13px;" data-bind="checked: activedAutocomplete"/><label data-bind="text: lang().autocomplete"></label></li>
-								<li><select data-bind="options: dataColumns, value: autocomplete_fieldname, optionsCaption: lang().fieldcaption, enable: activedAutocomplete"></select></li>
-							</ul>
-						</div>
-						<div class="col2">
-							<div data-bind="visible: !sparql()">
-								<h3 data-bind="text: lang().globalvar"></h3>
-								<p data-bind="text: lang().lmfroute"></p>
-								<p data-bind="text: serverURL"></p>
+					<!-- Login form -->
+					<div class="login_area">
+						<form>
+							<p>Username <input name="Usuario" data-bind="value: $root.userName" style="float:right" /></p>
+							<p>Password <input type="password" data-bind="value: $root.userPassword" style="float:right" /></p>
+							<div >
+								<p><input type="button" value="Login" data-bind="click: $root.doLogin" /></p>
 							</div>
-							<div data-bind="visible: sparql()">
-								<h3 data-bind="text: lang().sparqlaccessendpoint"></h3>
-								<input id="serverURL" type="text" data-bind="value: sparql_baseURL" placeholder="SPARQL endpoint"/>
-							</div>
-							<div data-bind="visible: !sparql()">
-								<h3 data-bind="text: lang().advancedoptions"></h3>
-								<button class="button" data-bind="click: $root.reindexSOLR, visible: !sparql()"><span data-bind="text: 
-									lang().reindexsolr"></span></button>
-								<button class="button" data-bind="click: $root.deleteConfiguration, visible: !sparql()"><span data-bind="text: 
-									lang().resetconf"></span></button>
-							</div>
-						</div>
-						<div style="clear:both">					
-							<button class="button" id="save_changes" data-bind="click: $root.doSave, visible: !sparql()"><span data-bind="text: 
-								lang().savechanges"></span> </button>
-						</div>
-						<br/>
+						</form>
+				</div>
+				</div>
+				<!-- Configuration section (hidden by default) -->
+				<div id="configuration" data-bind="fadeVisible: showConfigurationPanel">
+					<div class="ui-widget-header">
+						<h2 data-bind="text: lang().configuration"></h2>
 					</div>
+					<div class="col1">
+						<h3 data-bind="text: lang().personalization"></h3>
+						<ul>
+							<li data-bind="text: lang().pagetitle"></li>
+							<li><input id="pagetitle" type="text" data-bind="value: pageTitle" placeholder="Título de la página" /></li>
+							<li data-bind="text: lang().logo"></li>
+							<li><input id="logopath" type="text" data-bind="value: logoPath" placeholder="Logo de la página" /></li>
+							<li data-bind="text: lang().language"></li>
+							<li><select id="lang" data-bind="options: languages, value: selectedLanguage, optionsCaption: 
+								lang().langcaption"></select></li>
+							<li><input type="checkbox" style="width:13px;" data-bind="checked: activedAutocomplete"/><label data-bind="text: lang().autocomplete"></label></li>
+							<li><select data-bind="options: dataColumns, value: autocomplete_fieldname, optionsCaption: lang().fieldcaption, enable: activedAutocomplete"></select></li>
+						</ul>
+					</div>
+					<div class="col2">
+						<div data-bind="visible: !sparql()">
+							<h3 data-bind="text: lang().globalvar"></h3>
+							<p data-bind="text: lang().lmfroute"></p>
+							<p data-bind="text: serverURL"></p>
+						</div>
+						<div data-bind="visible: sparql()">
+							<h3 data-bind="text: lang().sparqlaccessendpoint"></h3>
+							<input id="serverURL" type="text" data-bind="value: sparql_baseURL" placeholder="SPARQL endpoint"/>
+						</div>
+						<div data-bind="visible: !sparql()">
+							<h3 data-bind="text: lang().advancedoptions"></h3>
+							<button class="button" data-bind="click: $root.reindexSOLR, visible: !sparql()"><span data-bind="text: 
+								lang().reindexsolr"></span></button>
+							<button class="button" data-bind="click: $root.deleteConfiguration, visible: !sparql()"><span data-bind="text: 
+								lang().resetconf"></span></button>
+						</div>
+					</div>
+					<div style="clear:both">					
+						<button class="button" id="save_changes" data-bind="click: $root.doSave, visible: !sparql()"><span data-bind="text: 
+							lang().savechanges"></span> </button>
+					</div>
+					<br/>
+				</div>
 			</header>
 			<!-- floating configuration button to open/close -->
 			<div id="configuration_button" data-bind="click: $root.showConfiguration, visible: $root.adminMode">
@@ -798,7 +810,7 @@
 			</div>
 			
 			
-		</script>
+		</script>	
 		<script id="widget-template-tagcloud" type="text/html">
 			<a href='#' class="tag" data-bind="click: $root.tagCloudSelection.bind($data, $parent.id(), id, name()), css: { selected: 
 			state()}"><span data-bind="text: name"></span><span class="count" data-bind="css: {'zero': count()=='0' }, text: count"></span></a>
