--- a/login.html
+++ b/login.html
@@ -21,53 +21,85 @@
 			return "Basic " + hash;
 		}
 
-		function doLogin(){
-		$.ajax({
-			type:"GET",
-			url: "http://localhost:8080/LMF/user/login",
-			//url: "http://shannon.gsi.dit.upm.es/episteme/lmf/user/login",
-			data: { logout: 'false', user: 'admin' },
-			beforeSend: function(xhr){		
-				//xhr.setRequestHeader("Access-Control-Allow-Origin", "*");
-				//xhr.setRequestHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE");
+		function doLogin() {
+			$.ajax({
+				type: "GET",
+				url: "http://localhost:8080/LMF/user/login",
+				//url: "http://shannon.gsi.dit.upm.es/episteme/lmf/user/login",
+				data: {
+					logout: 'false',
+					user: 'admin'
+				},
+				beforeSend: function (xhr) {
+					//xhr.setRequestHeader("Access-Control-Allow-Origin", "*");
+					//xhr.setRequestHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE");
+					xhr.setRequestHeader('Authorization', make_base_auth('admin', 'pass'));
+					//xhr.setRequestHeader("Cache-Control", "max-age=0");				
+					//xhr.setRequestHeader("Referer", "http://www.google.com");
+				},
+				success: function (data) {
+					alert("Login correcto");
+				},
+				error: function (data) {
+					console.log(data);
+					if (data.status == '401') {
+						alert("USUARIO INCORRECTO");
+					} else {
+						alert("USUARIO CORRECTO");
+					}
+				}
+			});
+		}
 
-				xhr.setRequestHeader('Authorization', make_base_auth('admin', 'pass123'));
-				//xhr.setRequestHeader("Cache-Control", "max-age=0");				
-				//xhr.setRequestHeader("Referer", "http://www.google.com");
-			},
-			success: function(data){
-				alert("Login correcto");	
-			},
-			error: function(data) {
-				console.log(data);
-				if(data.status=='401'){
-					alert("USUARIO INCORRECTO");
-				}else{
-					alert("USUARIO CORRECTO");
+		function whois() {
+			$.ajax({
+				type: "GET",
+				url: "http://localhost:8080/LMF/user/me",
+				beforeSend: function (xhr) {
+					//xhr.setRequestHeader('Authorization', make_base_auth('admin', 'pass123'));
+					//xhr.setRequestHeader("Cache-Control", "max-age=0");				
+					//xhr.setRequestHeader("Referer", "http://www.google.com");
+					xhr.setRequestHeader('Authorization', make_base_auth('admin2', 'pass2'));
+				},
+				success: function (data) {
+					console.log(data);
+					alert("Eres " + data.login);
+				},
+				error: function (data) {
+					console.log(data);
+				}
+			});
+		}
+
+		function setCookie(c_name, value, exdays) {
+			var exdate = new Date();
+			exdate.setDate(exdate.getDate() + exdays);
+			var c_value = escape(value) + ((exdays == null) ? "" : "; expires=" + exdate.toUTCString());
+			document.cookie = c_name + "=" + c_value;
+			console.log(c_value);
+		}
+
+		function getCookie(c_name) {
+			var i, x, y, ARRcookies = document.cookie.split(";");
+			for (i = 0; i < ARRcookies.length; i++) {
+				x = ARRcookies[i].substr(0, ARRcookies[i].indexOf("="));
+				y = ARRcookies[i].substr(ARRcookies[i].indexOf("=") + 1);
+				x = x.replace(/^\s+|\s+$/g, "");
+				console.log(x+":"+y);				
+				if (x == c_name) {
+					return unescape(y);
 				}
 			}
-		});	
 		}
-		
-		function whois(){
-		$.ajax({
-			type:"GET",
-			url: "http://localhost:8080/LMF/user/me",
-			beforeSend: function(xhr){		
-				//xhr.setRequestHeader('Authorization', make_base_auth('admin', 'pass123'));
-				//xhr.setRequestHeader("Cache-Control", "max-age=0");				
-				//xhr.setRequestHeader("Referer", "http://www.google.com");
-				xhr.setRequestHeader('Authorization', make_base_auth('admin', 'pass123'));
-			},
-			success: function(data){
-				console.log(data);
-				alert("Eres " + data.login);	
-			},
-			error: function(data) {
-				console.log(data);
-			}
-		});				
+
+		function pruebaCookie() {
+			setCookie("karim", "hola", 15);
 		}
+
+		function sacaCookie(){
+			getCookie("alberto");
+		}
+
 		</script>
 	</head>
 	
@@ -75,6 +107,8 @@
 
 	<button onclick='doLogin()'>Hacer login</button>
 	<button onclick='whois()'>Quien soy</button>
+	<button onclick='pruebaCookie()'>Cookie</button>
+	<button onclick='sacaCookie()'>Cookie</button>
 	</body>
 	
 </html>
