--- a/_sefarad.html
+++ b/_sefarad.html
@@ -664,37 +664,47 @@
 			
 			<!-- Results Widget -->
 			{{if type()=="resultswidget"}}
-			<div class="ui-widget"><div class="ui-widget-header"><div style="float:left"><div class="ui-icon" data-bind="css: 
-				{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div></div><h3><a 
-				href="#" data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== 
-				$root.editingTitle()"></a></h3><input data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { 
-				blur: function() { $root.editTitle(''); } }"/><div style="display:inline-block; float: right;"><div style="float: right;" 
-				class="ui-icon ui-icon-trash" data-bind="click: $root.deleteWidget.bind($data, id(), type()), visible: 
-				$root.adminMode"></div><div class="ui-icon ui-icon-gear" style="float: right;" data-bind="visible: $root.adminMode, click: 
-				function(){showWidgetConfiguration(!showWidgetConfiguration());}"></div></div></div><div class="ui-widget-content" 
-				data-bind="visible: !collapsed()">	
-			<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
-			<div data-bind="template: { name: 'results-layout', foreach: $root.resultsLayout }"></div>
+			<div class="ui-widget">
+			<div class="ui-widget-header">
+				<div style="float:left">
+					<div class="ui-icon" data-bind="css: 
+						{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div>
+				</div>
+				<h3><a href="#" data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== 
+					$root.editingTitle()"></a></h3>
+				<input data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { 
+					blur: function() { $root.editTitle(''); } }"/>
+				<div style="display:inline-block; float: right;">
+					<div style="float: right;" 
+						class="ui-icon ui-icon-trash" data-bind="click: $root.deleteWidget.bind($data, id(), type()), visible: 
+						$root.adminMode"></div>
+					<div class="ui-icon ui-icon-gear" style="float: right;" data-bind="visible: $root.adminMode, click: 
+						function(){showWidgetConfiguration(!showWidgetConfiguration());}"></div>
+				</div>
 			</div>
-			
+			<div class="ui-widget-content" 
+				data-bind="visible: !collapsed()">
+			<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
+				<div data-bind="template: { name: 'results-layout', foreach: $root.resultsLayout }"></div>
+			</div>
 			<div class="resultswidget-header">
-			<div data-bind="visible: !$root.sparql()"><div id="pager-header" ></div><ul id="pager"></ul></div>
-			<br>
-			<h2 data-bind="visible: $root.anyActiveFilter(), text: $root.lang().activefilters"></h2>
-			
-			<h2 data-bind="visible: !$root.anyActiveFilter(), text: $root.lang().notActiveFilters"></h2>
-			<div data-bind="template: { name: 'list-active-filter', foreach: $root.activeWidgets } " ></div>
-			
-			<a href="#" class="tag" data-bind="text: $root.filter, click: function() { $root.filter(''); }, visible: 
-				$root.filter()!=''"></a>
-			<br>
-			
+				<div data-bind="visible: !$root.sparql()">
+					<div id="pager-header" ></div>
+					<ul id="pager"></ul>
+				</div>
+				<br>
+				<h2 data-bind="visible: $root.anyActiveFilter(), text: $root.lang().activefilters"></h2>
+				<h2 data-bind="visible: !$root.anyActiveFilter(), text: $root.lang().notActiveFilters"></h2>
+				<div data-bind="template: { name: 'list-active-filter', foreach: $root.activeWidgets } " ></div>
+				<a href="#" class="tag" data-bind="text: $root.filter, click: function() { $root.filter(''); }, visible: 
+					$root.filter()!=''"></a>
+				<br>
 			</div>
 			
 			{{if $root.sparql()}}
 				<div id="resultados">
 					<div class="resultado" data-bind="visible: $root.filteredData().length > 0, template: { name: 
-				'results-sparql', foreach: $root.filteredData, afterRender: $root.animateResultsChange }">
+					'results-sparql', foreach: $root.filteredData, afterRender: $root.animateResultsChange }">
 					</div>
 				</div>									
 				
@@ -726,47 +736,71 @@
 			<!-- Results stats widget -->
 			{{else type()=="resultstats"}}
 			
-			<li class="ui-widget"><div class="ui-widget-header"><div style="float:left"><div class="ui-icon" data-bind="css: 
-				{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div></div><h3><a href="#" 
-				data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== $root.editingTitle()"></a></h3><input 
-				data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { blur: function() { $root.editTitle(''); } 
-				}"/><div style="display:inline-block; float: right;"><div style="float: right;" class="ui-icon ui-icon-trash" data-bind="click: 
-				$root.deleteWidget.bind($data, id(), type()), visible: $root.adminMode"></div><div class="ui-icon ui-icon-gear" id="resultsConfig" style="float: 
-				right;" data-bind="visible: $root.adminMode, click: 
-				function(){showWidgetConfiguration(!showWidgetConfiguration());}"></div></div></div><div class="ui-widget-content" 
-				data-bind="visible: !collapsed()">	
-			<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
-			<div data-bind="template: { name: 'widget-template-resultsstats', foreach: $root.resultsGraphs }" style="display: 
-				inline"></div>
-			</div>	
-			
-			<div class="graphics"></div>
-			</div>
+			<li class="ui-widget">
+				<div class="ui-widget-header">
+					<div style="float:left">
+						<div class="ui-icon" data-bind="css: 
+							{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div>
+					</div>
+					<h3><a href="#" 
+						data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== $root.editingTitle()"></a></h3>
+					<input 
+						data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { blur: function() { $root.editTitle(''); } 
+						}"/>
+					<div style="display:inline-block; float: right;">
+						<div style="float: right;" class="ui-icon ui-icon-trash" data-bind="click: 
+							$root.deleteWidget.bind($data, id(), type()), visible: $root.adminMode"></div>
+						<div class="ui-icon ui-icon-gear" id="resultsConfig" style="float: 
+							right;" data-bind="visible: $root.adminMode, click: 
+							function(){showWidgetConfiguration(!showWidgetConfiguration());}"></div>
+					</div>
+				</div>
+				<div class="ui-widget-content" 
+					data-bind="visible: !collapsed()">
+					<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
+						<div data-bind="template: { name: 'widget-template-resultsstats', foreach: $root.resultsGraphs }" style="display: 
+							inline"></div>
+					</div>
+					<div class="graphics"></div>
+				</div>
 			</li>
 			
 			
 			{{else type()=="tagcloud"}}
-			<li class="ui-widget"><div class="ui-widget-header"><div style="float:left"><div class="ui-icon" data-bind="css: 
-				{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div></div><h3><a 
-				href="#" data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== 
-				$root.editingTitle()"></a></h3><input data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { 
-				blur: function() { $root.editTitle(''); } }"/><div style="display:inline-block; float: right;"><div style="float: right;" 
-				class="ui-icon ui-icon-trash" data-bind="click: $root.deleteWidget.bind($data, id(), type()), visible: 
-				$root.adminMode"></div><div class="ui-icon ui-icon-gear" style="float: right;" data-bind="visible: $root.adminMode, click: 
-				function(){showWidgetConfiguration(!showWidgetConfiguration());}"></div></div></div><div class="ui-widget-content" 
+			<li class="ui-widget">
+			<div class="ui-widget-header">
+				<div style="float:left">
+					<div class="ui-icon" data-bind="css: 
+						{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div>
+				</div>
+				<h3><a 
+					href="#" data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== 
+					$root.editingTitle()"></a></h3>
+				<input data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { 
+					blur: function() { $root.editTitle(''); } }"/>
+				<div style="display:inline-block; float: right;">
+					<div style="float: right;" 
+						class="ui-icon ui-icon-trash" data-bind="click: $root.deleteWidget.bind($data, id(), type()), visible: 
+						$root.adminMode"></div>
+					<div class="ui-icon ui-icon-gear" style="float: right;" data-bind="visible: $root.adminMode, click: 
+						function(){showWidgetConfiguration(!showWidgetConfiguration());}"></div>
+				</div>
+			</div>
+			<div class="ui-widget-content" 
 				data-bind="visible: !collapsed()">
 			
 			{{if layout()=="vertical"}}
-			<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
-			<p>Estilo del Widget</p>
-			<img height="32px" width="32px" src="img/tag_icon.png" data-bind="click: $root.switchLayout"/>
-			<img height="32px" width="32px" class="activo" src="img/list_icon.png"/>
-			</div>		
-			
-			<ul data-bind="kendoPanelBar: { }"><li><span class="filterName" data-bind="text: title()"></span>	
-			
-			<ul data-bind="template: {name: 'widget-template-panelbar', foreach: $data.values }"></ul>
-			</li></ul>	
+				<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
+					<p>Estilo del Widget</p>
+					<img height="32px" width="32px" src="img/tag_icon.png" data-bind="click: $root.switchLayout"/>
+					<img height="32px" width="32px" class="activo" src="img/list_icon.png"/>
+				</div>
+				<ul data-bind="kendoPanelBar: { }">
+					<li>
+						<span class="filterName" data-bind="text: title()"></span>	
+						<ul data-bind="template: {name: 'widget-template-panelbar', foreach: $data.values }"></ul>
+					</li>
+				</ul>
 			{{else}}
 			<div class="widget-configuration" data-bind="fadeVisible: showWidgetConfiguration">
 			<p>Estilo del Widget</p>
@@ -779,13 +813,24 @@
 			{{/if}}
 			
 			{{else}}
-			<li class="ui-widget"><div class="ui-widget-header"><div style="float:left"><div class="ui-icon" data-bind="css: 
-				{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div></div><h3><a 
-				href="#" data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== 
-				$root.editingTitle()"></a></h3><input data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { 
-				blur: function() { $root.editTitle(''); } }"/><div style="float:right"><div class="ui-icon ui-icon-trash" data-bind="click: 
-				$root.deleteWidget.bind($data, id(), type()), visible: $root.adminMode"></div></div></div><div class="ui-widget-content" 
-				data-bind="visible: !collapsed()">
+				<li class="ui-widget">
+					<div class="ui-widget-header">
+						<div style="float:left">
+							<div class="ui-icon" data-bind="css: 
+								{'ui-icon-arrow-1-s': collapsed(), 'ui-icon-arrow-1-n': !collapsed()}, click: $root.collapseWidget"></div>
+						</div>
+						<h3><a 
+							href="#" data-bind="text: title, click: function() { $root.editTitle($data); }, visible: $data !== 
+							$root.editingTitle()"></a></h3>
+						<input data-bind="value: title, visibleAndSelect: $data === $root.editingTitle(), event: { 
+							blur: function() { $root.editTitle(''); } }"/>
+						<div style="float:right">
+							<div class="ui-icon ui-icon-trash" data-bind="click: 
+								$root.deleteWidget.bind($data, id(), type()), visible: $root.adminMode"></div>
+						</div>
+					</div>
+					<div class="ui-widget-content" 
+						data-bind="visible: !collapsed()">
 			{{if type()=="slider"}}
 			<div class="slider"></br><span>Rango filtrado: </span><span data-bind="text: values"></span><div data-bind="slider: $data, 
 				sliderOptions: {min: $data.limits()[0], max: $data.limits()[1], values: $data.values(), step: $data.value()}"></div></br></div>
@@ -860,9 +905,10 @@
 		</script>
 		<script id="active-filter" type="text/html">
 			<div data-bind="visible: state()" style="display: inline;">
-				<div style="display: inline;"><a href="#" class="tag" data-bind="text: name, click: $root.tagCloudSelection.bind($data, 
-			$parent.id(), id, name())"></a></div>
-			</div>	
+				<div style="display: inline;">
+					<a href="#" class="tag" data-bind="text: name, click: $root.tagCloudSelection.bind($data, $parent.id(), id, name())"></a>
+				</div>
+			</div>
 		</script>
 		<script id="results-layout" type="text/html">
 			<p data-bind="text: Name"></p>
@@ -871,14 +917,15 @@
 		<script type="text/html" id="cards">
 			<li class="result_box">
 				<img id="logoimage" data-bind="attr: {src: $data[$root.resultsLayout()[3].Value()]}" />
-				<div class="name"><h2 data-bind="text: $data[$root.resultsLayout()[0].Value()]"></h2></div>
+				<div class="name">
+					<h2 data-bind="text: $data[$root.resultsLayout()[0].Value()]"></h2>
+				</div>
 				<h4 class="description" data-bind="text: $data[$root.resultsLayout()[1].Value()]"></h4>
 				<p data-bind="text: $data[$root.resultsLayout()[2].Value()]"></p> 
 			</li>
 		</script>			
 		<script type="text/html" id="simple">				
-			<img id="logoimage" data-bind="attr: {src: $data[$root.resultsLayout()[3].Value()]}" />
-			
+			<img id="logoimage" data-bind="attr: {src: $data[$root.resultsLayout()[3].Value()]}" />			
 			<h2 data-bind="text: $data[$root.resultsLayout()[0].Value()]"></h2>
 			<h4 data-bind="text: $data[$root.resultsLayout()[1].Value()]"></h4>
 			<p data-bind="text: $data[$root.resultsLayout()[2].Value()]"></p>
@@ -901,19 +948,18 @@
 		</script>
 		<script type="text/html" id="new-widgets-template">
 			<div class="box cat4">
-				 <h1 data-bind="text: $data.name"></h1>
-				   <table id="wrapper">
+				<h1 data-bind="text: $data.name"></h1>
+				<table id="wrapper">
 					<tr>
-					 <td><img data-bind="attr:{src: $data.img}" alt="Panelbar"/></td>
-				      </tr>
-				   </table>				 
-					<div class="mask">
-						<h2 data-bind="text: $data.name"></h2>
-						<p data-bind="text: $data.description"></p>
-						<a href="#" data-bind="click: $data.render"><button class="button">Añadir</button></a>
-			
-					</div>
-			         </div>	
+						<td><img data-bind="attr:{src: $data.img}" alt="Panelbar"/></td>
+					</tr>
+				</table>
+				<div class="mask">
+					<h2 data-bind="text: $data.name"></h2>
+					<p data-bind="text: $data.description"></p>
+					<a href="#" data-bind="click: $data.render"><button class="button">Añadir</button></a>
+				</div>
+			</div>
 		</script>
 		<!-- end templates -->
 		<!-- THIS MUST BE AT THE END: loads the model-view-viewmodel -->
