--- a/sefarad.html
+++ b/sefarad.html
@@ -48,7 +48,7 @@
 		<!-- sefarad -->
 		<script type="text/javascript" charset="UTF-8" src="js/charts_configuration.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/lang.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="default_configuration.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/default_configuration.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/wizards.js"></script>
 		<!-- graphics -->
 		<script type="text/javascript" charset="UTF-8" src="js/ext/highcharts.js"></script>
@@ -155,6 +155,7 @@
 				<div class="right_area" >
 					
 					<div class="icon"><img src="img/help.png" alt="Help" data-bind="click: $root.showHelp"/></div>
+					<div class ="icon" data-bind="click: $root.showConfiguration, visible: $root.adminMode"><img src="img/settings.png" alt="Configuration" /></div>
 					<div class="search" id="search-container">
 						<div class="search-inner">
 							<div id="search-btn"></div>
@@ -170,7 +171,7 @@
 								data-bind="kendoAutoComplete: { data: autoCompleteFieldsSOLR, value: filter }"/>
 							<!-- /ko -->
 						</div>
-					</div>
+					</div>					
 				</div>
 				<!-- User-Pass Dialog -->
 				<div id="dialog">
@@ -196,7 +197,7 @@
 								lang().langcaption"></select></li>
 							<li><input type="checkbox" style="width:13px;" data-bind="checked: activedAutocomplete"/><label data-bind="text: lang().autocomplete"></label></li>
 							<li><select data-bind="options: dataColumns, value: autocomplete_fieldname, optionsCaption: lang().fieldcaption, enable: activedAutocomplete"></select></li>
-							<li><input type="checkbox" style="width:13px;" data-bind="checked: sortableWidgets"/><label>Sortable widgets</label></li>	
+							<li><input type="checkbox" style="width:13px;" data-bind="checked: sortableWidgets"/><label data-bind="text: lang().sortableWidgets"></label></li>	
 						</ul>
 					</div>
 					<div class="col2">
@@ -225,12 +226,12 @@
 				</div>
 			</header>
 			<!-- floating configuration button to open/close -->
-			<div id="configuration_button" data-bind="click: $root.showConfiguration, visible: $root.adminMode">
+			<!-- <div id="configuration_button" data-bind="click: $root.showConfiguration, visible: $root.adminMode">
 				<div>
 					<span id="editmode" data-bind="visible: !$root.showConfigurationPanel(), text: lang().openconf"></span>
 					<span id="editmode" data-bind="visible: $root.showConfigurationPanel(), text: lang().closeconf"></span>
 				</div>
-			</div>			
+			</div> -->			
 			<!-- new widget wizard -->
 			<div data-bind="kendoWindow: { isOpen: openNewWidgetManager, title: lang().addWidget, visible: false }">
 				<div class="widgetWizard">
