Added num_rows selector

--- a/_sefarad.html
+++ b/_sefarad.html
@@ -697,6 +697,14 @@
 			</div>
 			<div class="resultswidget-header">
 				<div data-bind="visible: !$root.sparql()">
+					<select id="pager-perPage" data-bind="value: $root.num_rows">
+					    <option value=10>10</option>
+      					<option value=20>20</option>
+        				<option value=30>30</option>
+        				<option value=40>40</option>
+      					<option value=50>50</option>      					
+					</select>
+					<label>Resultados por pagina</label>
 					<div id="pager-header" ></div>
 					<ul id="pager"></ul>
 				</div>
