More widgets fixed

--- a/_sefarad.html
+++ b/_sefarad.html
@@ -662,7 +662,7 @@
 				<div data-bind="template: { name: 'results-layout', foreach: $root.resultsLayout }"></div>
 			</div>
 			<div class="resultswidget-header">
-				<div data-bind="visible: !$root.sparql()">
+				<div>
 					<select id="pager-perPage" data-bind="value: $root.num_shown">
 					    <option value=10>10</option>
       					<option value=20>20</option>
