--- a/_sefarad.html
+++ b/_sefarad.html
@@ -678,7 +678,8 @@
 	      					<option value=20>20</option>
 	        				<option value=30>30</option>
 	        				<option value=40>40</option>
-	      					<option value=50>50</option>      					
+	      					<option value=50>50</option>
+	      					<option data-bind="value: $root.filteredData().length">All</option>  					
 						</select>
 						<label alt="Per page" data-bind="text:$root.lang().perPage"></label>
 
