New improvements in WidgetBarras

--- a/sefarad.html
+++ b/sefarad.html
@@ -2,16 +2,16 @@
 <html lang="es">
 	<!-- head starts -->
 	<head>
-		<script type="text/javascript" src="js/widgets/exampleWidget.js"></script>
-		<script type="text/javascript" src="js/widgets/stockWidget.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetBarras.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetD3.js"></script>
-		<script type="text/javascript" src="js/widgets/widgetDonuts.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetMap.js"></script>
+		<script type="text/javascript" src="js/widgets/widgetBarras.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetSortBar.js"></script>
+		<script type="text/javascript" src="js/widgets/widgetD3.js"></script>
+		<script type="text/javascript" src="js/widgets/stockWidget.js"></script>
+		<script type="text/javascript" src="js/widgets/widgetDonuts.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetWheel.js"></script>
+		<script type="text/javascript" src="js/widgets/exampleWidget.js"></script>
 		<script type="text/javascript">
-			var widgetX = [exampleWidget, stockWidget, widgetBarras, widgetD3, widgetDonuts, widgetMap, widgetSortBar, widgetWheel];
+			var widgetX = [widgetMap, widgetBarras, widgetSortBar, widgetD3, stockWidget, widgetDonuts, widgetWheel, exampleWidget];
 		</script>
 		<meta charset="utf-8" />
 		<title>SEFARAD</title>
