grunt-contrib-copy included

--- a/src/_sefarad.html
+++ b/src/_sefarad.html
@@ -647,5 +647,9 @@
 			<!-- This will be replaced by the content of /knockout_templates/templates.html -->
 		<!-- /build -->
 
+		<!-- THIS MUST BE AT THE END: loads the model-view-viewmodel -->
+		<script type='text/javascript' charset="UTF-8" src="js/mvvm.js"></script>
+		<script type="text/javascript" charset="UTF-8" id="sgvzlr_script" src="js/ext/sgvizler.js"></script>
+
 	</body>
 </html>
