--- a/src/demo.html
+++ b/src/demo.html
@@ -30,7 +30,7 @@
 		<div class="promo">
 			<ul class="grid">
 				<li class="topic topic-search">
-					<a href="sefarad.html#/sparql/universitiesDemo">
+					<a href="index.html#/sparql/universitiesDemo">
 						<span class="icon-topic">&nbsp;</span>
 						<h2 data-bind="text: lang().demo1a"></h2>
 						<ul>
@@ -47,7 +47,7 @@
 					</a>
 				</li>
 				<li class="topic topic-search">
-					<a href="sefarad.html">
+					<a href="index.html">
 						<span class="icon-topic">&nbsp;</span>
 						<h2 data-bind="text: lang().demo3a">
 						</h2>
