--- a/src/sefarad.html
+++ b/src/sefarad.html
@@ -2,7 +2,6 @@
 <html lang="es">
 	<!-- head starts -->
 	<head>
-		<script type="text/javascript" src="js/widgets/exampleWidget.js"></script>
 		<script type="text/javascript" src="js/widgets/stockWidget.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetBarras.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetD3.js"></script>
@@ -11,7 +10,7 @@
 		<script type="text/javascript" src="js/widgets/widgetSortBar.js"></script>
 		<script type="text/javascript" src="js/widgets/widgetWheel.js"></script>
 		<script type="text/javascript">
-			var widgetX = [exampleWidget, stockWidget, widgetBarras, widgetD3, widgetDonuts, widgetMap, widgetSortBar, widgetWheel];
+			var widgetX = [stockWidget, widgetBarras, widgetD3, widgetDonuts, widgetMap, widgetSortBar, widgetWheel];
 		</script>
 		<meta charset="utf-8" />
 		<title>SEFARAD</title>
